--- a/tdd-katas-roman-numerals/package.json
+++ b/tdd-katas-roman-numerals/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "tdd-katas",
+  "name": "tdd-katas-roman-numerals",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.1",
+    "husky": "^4.3.8",
     "jest": "^28.1.1",
+    "lint-staged": "^13.0.1",
     "standard": "^17.0.0"
   }
 }
