--- a/tdd-katas-roman-numerals/package.json
+++ b/tdd-katas-roman-numerals/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^4.3.8",
     "jest": "^28.1.1",
-    "lint-staged": "^13.0.1",
     "standard": "^17.0.0"
   }
 }
