--- a/tdd-katas-roman-numerals/package.json
+++ b/tdd-katas-roman-numerals/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "tdd-katas-roman-numerals",
+  "name": "tdd-katas",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest __test__ --watch --verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.1.1",
-    "standard": "^17.0.0"
+    "jest": "^28.1.1"
+  },
+  "dependencies": {
+    "prettier": "^2.6.2"
   }
 }
