--- a/tdd-katas/package.json
+++ b/tdd-katas/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest . --verbose",
+    "test": "jest . --verbose --watch",
     "test:watch": "jest . --watch"
   },
   "author": "",
