--- a/tdd-katas-marsRover/package.json
+++ b/tdd-katas-marsRover/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest __test__ --watch --verbose"
+  },
   "dependencies": {
     "jest": "^28.1.2",
     "prettier": "^2.7.1"
