--- a/tdd-katas/package.json
+++ b/tdd-katas/package.json
@@ -14,7 +14,9 @@
     "typescript": "^4.7.3"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
+    "@types/mocha": "^9.1.1",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1"
