--- a/api-swapi/package.json
+++ b/api-swapi/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "nock": "^13.5.4"
   },
   "devDependencies": {
     "mocha": "^10.4.0"
