--- a/react-query-complete/package.json
+++ b/react-query-complete/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.21",
     "autoprefixer": "^10.4.20",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
